Alteração index e style

--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -3,16 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto</title>
+    <title>DevLinks</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="container">
       <div id="profile">
-        <img
-          src="/assets/73870113_041_ff57.jpg"
-          alt="Imagem da gostosa da Amber"
-        />
+        <img src="" alt="Minha imagem" />
         <p>Gostosa da Amber</p>
       </div>
       <div id="switch" onclick="toggleMode()">
@@ -21,39 +18,24 @@
       </div>
       <ul>
         <li id="link1">
-          <a
-            href="https://pt.pornhub.com/view_video.php?viewkey=ph60ed2693a9b9f"
-          >
-            Melhor de todos
-          </a>
+          <a href="#"> Site pessoal </a>
         </li>
         <li>
-          <a
-            href="https://pt.pornhub.com/view_video.php?viewkey=ph61c37cfa65793"
-            >Segundo</a
-          >
+          <a href="#">Interesses</a>
         </li>
         <li>
-          <a
-            href="https://www.eporner.com/video-Q1SUHxzrnBQ/amber-s-playroom/?trx=1227735290aee694b81473a256bea12420712"
-          >
-            Terceiro
-          </a>
+          <a href="#"> Portifólio </a>
         </li>
         <li>
-          <a
-            href="https://hdporn-movies.com/video/cum4k-numerous-oozing-creampies-deep-inside-hot-ladies-101806.html"
-          >
-            Quarto
-          </a>
+          <a href="#"> Outro </a>
         </li>
       </ul>
       <div id="social-links">
-        <a href="#" target="_blank">
+        <a href="https://www.instagram.com/rafhael.hasantos/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="#" target="_blank">
+        <a href="https://github.com/Rafhael-Henrique" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
 
@@ -61,13 +43,16 @@
           <ion-icon name="logo-twitter"></ion-icon>
         </a>
 
-        <a href="#" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/rafhael-henrique-9b7744262"
+          target="_blank"
+        >
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
       <footer>
-        Feito para ela, Kappa KEKW
-        <a href="https://pt.pornhub.com/pornstar/amber-moore"> Kappa demaisi</a>
+        Feito por Rockseat
+        <a href="#"> Kappa demaisi</a>
       </footer>
     </div>
     <script
