--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -51,7 +51,7 @@
         </a>
       </div>
       <footer>
-        Feito por Rockseat
+        Feito por Rocketseat
         <a href="#"> Kappa demaisi</a>
       </footer>
     </div>
