Alteração 3 - index e script

--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -10,7 +10,7 @@
     <div id="container">
       <div id="profile">
         <img src="" alt="Minha imagem" />
-        <p>Gostosa da Amber</p>
+        <p>@rafhael.hasantos</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
