Alteração 4 - Ajustes de imagem

--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -9,7 +9,10 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="" alt="Minha imagem" />
+        <img
+          src="/assets/647430fe-64d8-4135-91c4-721c449c13d3.jpg"
+          alt="Minha imagem"
+        />
         <p>@rafhael.hasantos</p>
       </div>
       <div id="switch" onclick="toggleMode()">
@@ -51,8 +54,8 @@
         </a>
       </div>
       <footer>
-        Feito por Rocketseat
-        <a href="#"> Kappa demaisi</a>
+        Feito por
+        <a href="https://www.rocketseat.com.br/">Rocketseat</a>
       </footer>
     </div>
     <script
